validator_derive_tests/tests/compile-fail/length/equal_and_min_max_set.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(length(min = 1, equal = 2))]
    s: String,
}

fn main() {}
